# template-starter

./: .gitignore  .gitmodules  README.md  lefthook.yml  package.json  turbo.json
.github/: renovate.json
apps/cli/: .gitignore  .release-it.json  .templates-cli.json  README.md  package.json  tsconfig.json  tsdown.config.ts  vitest.config.ts
apps/web/: nuxt.config.ts  package.json  tsconfig.json  uno.config.ts  vitest.config.ts
cli/: .release-it.json  .releaserc.json  README.md  package.json  tsconfig.json
cli/src/: app.ts  index.ts
templates/bun-lib/: README.md
templates/bun-package/: package.json  tsconfig.json
templates/fullstack-monorepo/: .oxlintrc.json  README.md  package.json  turbo.json  vitest.config.ts
templates/microservices/: .gitignore  README.md  docker-compose.yml  moon.yml  package.json
templates/monorepo/: .gitignore  package.json  turbo.json
templates/moonrepo/: .oxlintrc.json  package.json
templates/next/: package.json  uno.config.ts
templates/next-frontend/: middleware.ts  next.config.ts
templates/next-fullstack/: package.json
templates/node-package/: README.md  package.json
templates/nuxt/: .env.example  README.md  eslint.config.js  nuxt.config.ts  (+5 more)
templates/nuxt-monorepo/: .gitignore  README.md  package.json  turbo.json
templates/nuxt-simple/: lefthook.yml  nuxt.config.ts  tsconfig.json
templates/rust-lib/: .gitignore  Cargo.toml  Config.toml
templates/rust-lib/.cargo/: config.toml
templates/rust-lib/src/: error.rs  lib.rs  main.rs
web/: .env.example  README.md  nuxt.config.ts  package.json  uno.config.ts
(+363 files in other folders)
